--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">theBuzzer</h1>
-                        <p class="intro-text">A online site where you can call/contact for a tuitor about basketball.
+                        <p class="intro-text">A online site where you can call/contact for a tutor about basketball.
                             <br>Created by Danville D. Alimondo.</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
@@ -91,8 +91,8 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About theBuzzer</h2>
-                <p></p>
-                <p></p>
+                <p>the object of the this site is to provide a hassle-free reservation of a private tutor about Basketball.</p>
+                <p>The instructor will teach the client from the basic which is Ball Handling.</p>
                 <p></p>
             </div>
         </div>
@@ -104,8 +104,8 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Services</h2>
-                    <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+                    <p>You can pick a any of the days that are vacant for a tutor.</p>
+                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Schedule a Date</a>
                 </div>
             </div>
         </div>
