--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
     <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-    <script type="text/javascript" src="https://www.google.com.ph/maps/place/Baguio,+Benguet/@16.4085383,120.5980245,20z/data=!4m5!3m4!1s0x3391a16879def13f:0x8edef534be3a75c0!8m2!3d16.4023332!4d120.5960071"></script>
+    <img src="m.png">
 
     <!-- Theme JavaScript -->
     <script src="js/grayscale.min.js"></script>
